--- a/airvironment-mobile-ios-rbt-summer-2021/airvironment-mobile-ios-rbt-summer-2021/Features/History Screen/View/HistoryScreenViewController.xib
+++ b/airvironment-mobile-ios-rbt-summer-2021/airvironment-mobile-ios-rbt-summer-2021/Features/History Screen/View/HistoryScreenViewController.xib
@@ -1,22 +1,51 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HistoryScreenViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HistoryScreenViewController" customModule="airvironment_mobile_ios_rbt_summer_2021" customModuleProvider="target">
             <connections>
+                <outlet property="historyTableView" destination="cIW-Kq-tgm" id="RMj-lG-r6q"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="92Y-dn-2ex">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                </imageView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cIW-Kq-tgm">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="92Y-dn-2ex" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="0BP-6M-oQx"/>
+                <constraint firstItem="cIW-Kq-tgm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="1In-hC-Xb8"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="cIW-Kq-tgm" secondAttribute="bottom" id="CNC-ET-DfS"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="cIW-Kq-tgm" secondAttribute="trailing" id="HPR-ui-aPr"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="92Y-dn-2ex" secondAttribute="trailing" id="KbU-iF-Qe0"/>
+                <constraint firstItem="92Y-dn-2ex" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ltj-dh-ZjV"/>
+                <constraint firstItem="cIW-Kq-tgm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="lHG-f2-lcT"/>
+                <constraint firstAttribute="bottom" secondItem="92Y-dn-2ex" secondAttribute="bottom" id="lyt-AW-6KV"/>
+            </constraints>
+            <point key="canvasLocation" x="75" y="82"/>
         </view>
     </objects>
+    <resources>
+        <image name="background" width="360" height="640"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
